--- a/src/Acme.BookStore.Web/Pages/Books/Index.cshtml
+++ b/src/Acme.BookStore.Web/Pages/Books/Index.cshtml
@@ -15,7 +15,17 @@
     There are other useful tag helpers provided by the ABP Framework to easily use most of bootstrap's*@
     <abp-card>
         <abp-card-header>
-            <h2>@L["Books"]</h2>
+            <abp-row>
+                <abp-column size-md="_6">
+                    <abp-card-title>@L["Books"]</abp-card-title>
+                </abp-column>
+                <abp-column size-md="_6" class="text-end">
+                    <abp-button id="NewBookButton"
+                            text="@L["NewBook"].Value"
+                            icon="plus"
+                            button-type="Primary" />
+                </abp-column>
+            </abp-row>
         </abp-card-header>
         <abp-card-body>
             <abp-table striped-rows="true" id="BooksTable"></abp-table>
